tests/macro-tests/cases/property/args_count_none.stderr
error: property functions must have at least 2 inputs: child: impl IntoUiNode, arg0, ..
 --> cases/property/args_count_none.rs:3:1
  |
3 | #[property(CONTEXT)]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
